--- a/src/main/resources/sce_pt_BR.properties
+++ b/src/main/resources/sce_pt_BR.properties
@@ -7,7 +7,7 @@ primeiraPerguntaSentencaPlural =
 primeiraPerguntaSentencaCompleta = Planeta Terra 
 primeiraPerguntaSentencaNumerica = 
 primeiraPerguntaSentencaNegativa = 
-primeiraPerguntaSentencaSimilar = 
+primeiraPerguntaSentencaSimilar = Earth 
 primeiraPerguntaSentencaSimilarDois = 
 primeiraPerguntaSentencaSimilarTres = 
 primeiraPerguntaSentencaSimilarQuatro = 
